--- a/Bot/templates/base.html
+++ b/Bot/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='semantic/semantic.min.css', v=1)}}">
     <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -18,6 +20,10 @@
 .footer{position:relative!important;}
 }
 
+
+
+
+
     </style>
 </head>
 <body>
@@ -33,6 +39,9 @@
 
             <a class="item right" href="/">
                 <i class="align justify icon"></i> Все боты
+            </a>
+            <a class="item right" href="/archive">
+                <i class="align justify icon"></i> Архив ботов
             </a>
             <a class="item right" href="/settings">
                 <i class="align justify icon"></i> Настройки
@@ -50,6 +59,12 @@
 {% block main %}
 {% endblock %}
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+<script type="text/javascript">
+	      $(".livesearch").chosen();
 
+
+</script>
 </body>
 </html>
