--- a/Bot/templates/index.html
+++ b/Bot/templates/index.html
@@ -14,7 +14,7 @@
                         {% endfor %}
 
                     </select>
-                    <p><input type="submit" class="mini ui button" name="all" value="Поиск по дате"></p>
+                    <p><input type="submit" class="mini ui button" name="all" value="Поиск"></p>
 
 
                 </div>
