--- a/Bot/templates/message.html
+++ b/Bot/templates/message.html
@@ -55,6 +55,7 @@
             <th>Валютная пара</th>
             <th>Bot Id</th>
             <th>Количество</th>
+            <th>Продано</th>
             <th>По цене</th>
             <th>Профит</th>
             <th>Дата</th>
@@ -67,6 +68,7 @@
             <td data-label="Age">{{h.valute_par}}</td>
             <td data-label="Name"><a href="/message/{{h.bot_id}}">{{h.bot_id}}</a></td>
             <td data-label="Job">{{h.count}}</td>
+            <td data-label="Job">{{h.spent}}</td>
             <td data-label="Job">{{h.lvl}}</td>
             <td data-label="Job">{{h.profit}}</td>
             <td data-label="Job">{{h.date}}</td>
