--- a/Bot/templates/base.html
+++ b/Bot/templates/base.html
@@ -8,7 +8,7 @@
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src="static/semantic/semantic.min.js"></script>
+    <script src="{{url_for('static', filename='static/semantic/semantic.min.js', v=1)}}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -34,7 +34,7 @@
 
 
             <a class="item" href="/">
-                <h2>Binance Invest</h2>
+                <h2>HESOYAM</h2>
             </a>
 
             <a class="item right" href="/">
