--- a/Bot/templates/index.html
+++ b/Bot/templates/index.html
@@ -80,6 +80,7 @@
                 </div>
                 <div class="description">
                     Объем закупки: {{b.bot.count_hev}}<br>
+                    Потрачено: {{b.bot.spent}}<br>
                     Доход за цикл: {{b.bot.cikle_profit}}%<br>
                     Количество циклов: {{b.bot.cikle_count}}<br>
                     Общий доход: {{b.bot.total_profit}}%<br>
