--- a/Bot/templates/index.html
+++ b/Bot/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
+	<meta http-equiv="Refresh" content="15" />
 <div class="ui raised very padded text container segment">
     <div class="ui raised very padded segment">
         <div class="fields">
