--- a/Bot/templates/message.html
+++ b/Bot/templates/message.html
@@ -70,7 +70,7 @@
             <td data-label="Job">{{h.count}}</td>
             <td data-label="Job">{{h.spent}}</td>
             <td data-label="Job">{{h.lvl}}</td>
-            <td data-label="Job">{{h.profit}}</td>
+            <td data-label="Job">{{h.profit}}%</td>
             <td data-label="Job">{{h.date}}</td>
         </tr>
         {% endfor %}
