--- a/Bot/templates/botsetings.html
+++ b/Bot/templates/botsetings.html
@@ -16,6 +16,10 @@
             <input type="text" name="sum_invest" value="{{bot.sum_invest}}">
         </div>
         <div class="field">
+                <label>Общая сумма инвестиций</label>
+                <input type="text" name="total_sum_invest">
+            </div>
+        <div class="field">
             <label>Уровень покупки</label>
             <input type="text" name="bye_lvl" value="{{bot.bye_lvl}}">
         </div>
