--- a/Bot/templates/createbot.html
+++ b/Bot/templates/createbot.html
@@ -16,64 +16,69 @@
             <div class="field">
 
 
-            <script type="text/javascript">
+                <script type="text/javascript">
 	      $(".js-select2").chosen();
 
-            </script>
 
-        </div>
-        <div class="ui cards">
-            {% for b in balance %}
-            <div class="card">
-                <div class="content">
-                    <div class="meta">{{b.asset}}: {{b.free}}</div>
+                </script>
+
+            </div>
+            <div class="ui cards">
+                {% for b in balance %}
+                <div class="card">
+                    <div class="content">
+                        <div class="meta">{{b.asset}}: {{b.free}}</div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="field">
+                <label>Название</label>
+                <input type="text" name="name">
+            </div>
+            <div class="field">
+                <label>Сумма инвестиций</label>
+                <input type="text" name="sum_invest">
+            </div>
+            <div class="field">
+                <label>Общая сумма инвестиций</label>
+                <input type="text" name="total_sum_invest">
+            </div>
+            <div class="field">
+                <label>Уровень покупки</label>
+                <input type="text" name="bye_lvl">
+            </div>
+            <div class="field">
+                <label>Уровень продажи</label>
+                <input type="text" name="sell_lvl">
+            </div>
+
+            <div class="two fields">
+                <div class="field">
+                    <label>Тригер цена</label>
+                    <input type="text" name="triger_lvl">
+                </div>
+                <div class="field">
+                    <input type="checkbox" name="triger" class="hidden">
                 </div>
             </div>
-            {% endfor %}
-        </div>
-        <div class="field">
-            <label>Название</label>
-            <input type="text" name="name">
-        </div>
-        <div class="field">
-            <label>Сумма инвестиций</label>
-            <input type="text" name="sum_invest">
-        </div>
-        <div class="field">
-            <label>Уровень покупки</label>
-            <input type="text" name="bye_lvl">
-        </div>
-        <div class="field">
-            <label>Уровень продажи</label>
-            <input type="text" name="sell_lvl">
-        </div>
 
-        <div class="two fields">
-            <div class="field">
-                <label>Тригер цена</label>
-                <input type="text" name="triger_lvl">
+            <div class="two fields">
+                <div class="field">
+                    <select name="valuecheck" class="ui fluid dropdown">
+                        <option value="min">Минуты</option>
+                        <option value="hour">Часы</option>
+                        <option value="dey">Дни</option>
+                        <option value="month">Месяцы</option>
+                    </select>
+                </div>
+                <div class="field">
+                    <input type="number" name="check_time" value="10">
+                </div>
             </div>
-            <div class="field">
-                <input type="checkbox" name="triger" class="hidden">
-            </div>
-        </div>
-
-        <div class="two fields">
-            <div class="field">
-                <select name="valuecheck" class="ui fluid dropdown">
-                    <option value="min">Минуты</option>
-                    <option value="hour">Часы</option>
-                    <option value="dey">Дни</option>
-                    <option value="month">Месяцы</option>
-                </select>
-            </div>
-            <div class="field">
-                <input type="number" name="check_time" value="10">
-            </div>
-        </div>
 
 
-        <button class="ui button" type="submit">Submit</button>
+            <button class="ui button" type="submit">Submit</button>
     </form>
 </div>
 {% endblock %}
