--- a/Bot/templates/botsetings.html
+++ b/Bot/templates/botsetings.html
@@ -17,7 +17,7 @@
         </div>
         <div class="field">
                 <label>Общая сумма инвестиций</label>
-                <input type="text" name="total_sum_invest">
+                <input type="text" value="{{bot.base_total_sum_invest}}" name="base_total_sum_invest">
             </div>
         <div class="field">
             <label>Уровень покупки</label>
