--- a/Bot/templates/message.html
+++ b/Bot/templates/message.html
@@ -54,7 +54,7 @@
             <th>Тип</th>
             <th>Валютная пара</th>
             <th>Bot Id</th>
-            <th>Количество</th>
+            <th>Куплено</th>
             <th>Продано</th>
             <th>По цене</th>
             <th>Профит</th>
