--- a/Bot/templates/index.html
+++ b/Bot/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <div class="ui raised very padded text container segment">
-    <p><a type="submit" class="mini ui button" href="/zeros">Обнулить ботов</p>
+    <p><a type="submit" class="mini ui button" href="/zeros">Обнулить ботов</a></p>
     <div class="ui raised very padded segment">
         <div class="fields">
             <form method="post">
